--- a/index.html
+++ b/index.html
@@ -18,6 +18,38 @@
                 <div class="orange"></div>
             </div>
         </nav>
-    </header>    
+    </header> 
+        <main>
+            <div class="sez">
+                <div class="box-1"></div>
+                <div class="box-2"></div>
+            </div>
+            <div class="sez-gray">
+                <div class="box-1"></div>
+                <div class="box-2"></div>
+            </div>
+            <div class="sez">
+                <div class="box-1"></div>
+                <div class="box-2"></div>
+            </div>
+            <div class="sez-due">
+                <div class="bl-1"></div>
+                <div class="bl-2"></div>
+                <div class="bl-3"></div>
+            </div>
+            <div class="sez-gray">
+                <div class="col-1"></div>
+                <div class="col-2"></div>
+                <div class="col-3"></div>
+                <div class="col-4"></div>
+                <div class="col-5"></div>
+            </div>
+            <footer>
+                <div class="foot">
+                    <div class="bloc-1"></div>
+                    <div class="bloc-2"></div>
+                </div>
+            </footer>
+        </main>   
 </body>
 </html>
