fixato background mancante footer

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 <div class="col-4"></div>
                 <div class="col-5"></div>
             </div>
-            <footer>
-                <div class="foot">
+            <footer class="foot">
+                <div class="cont">
                     <div class="bloc-1"></div>
                     <div class="bloc-2"></div>
                 </div>
